# trade-journal

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/trade_journal/: __init__.py  __main__.py  analytics.py  charts.py  config.py  report.py  utils.py
tests/: conftest.py  test_analytics.py  test_charts.py  test_report.py  test_utils.py
