[build-system]
requires      = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "trade-journal"
version     = "2.1.0"
description = "Bloomberg-style trading performance analytics for Topstep funded accounts"
readme      = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
trade-journal = "trade_journal.__main__:main"

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
warn_return_any        = true
ignore_missing_imports = true
exclude                = ["tests/"]

[tool.setuptools.packages.find]
where = ["src"]
